Prevents load flicker in sidebar.

--- a/source/sass/component/_sidebar.scss
+++ b/source/sass/component/_sidebar.scss
@@ -4,7 +4,6 @@ $baseClass: ".c-sidebar";
     display: flex;
     flex-direction: column;
     background-color: $color-nav-background;
-    transition: left 0.5s ease-in-out;
 
     &--fixed {
         width: 288px;
@@ -150,9 +149,12 @@ $baseClass: ".c-sidebar";
         max-height: 0;
         overflow: hidden;
         padding-left: map-get($spacers, "1");
+        transition: opacity 200ms ease-in-out;
+        opacity: 0; 
 
         &#{$baseClass}__item--is-expanded {
             max-height: unset;
+            opacity: 1;
         }
 
         #{$baseClass}__item {
